--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "lodash": "4.x.x",
+    "mongoose-float": "^1.0.2",
     "strapi": "3.0.0-alpha.14.4.0",
-    "strapi-hook-mongoose": "3.0.0-alpha.14.4.0"
+    "strapi-hook-mongoose": "^3.0.0-alpha.14.4.0"
   },
   "author": {
     "name": "A Strapi developer",
